--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,35 +2,32 @@ name: Scrape Matches to JSON
 
 on:
   schedule:
-    - cron: "0 */12 * * *"   # every 12 hours
-  workflow_dispatch:        # manual run button
+    - cron: "0 */12 * * *"
+  workflow_dispatch:
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+      - run: pip install -r requirements.txt
 
       - name: Run scraper
-        run: |
-          python scraper.py
+        env:
+          SURL1: ${{ secrets.SURL1 }}
+          SURL2: ${{ secrets.SURL2 }}
+        run: python scraper.py
 
-      - name: Commit & Push JSON
+      - name: Commit JSON
         run: |
           git config --global user.name "github-bot"
           git config --global user.email "bot@github.com"
-
           git add matches.json
-          git commit -m "Auto update matches JSON" || echo "No changes to commit"
+          git commit -m "Auto update matches JSON" || echo "No changes"
           git push
