--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -33,4 +33,6 @@ jobs:
           git config --global user.email "bot@github.com"
           git add matches.json
           git commit -m "Auto update matches JSON" || echo "No changes"
-          git push
+          git pull --rebase origin main
+          git push origin main
+          
